--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <title>Vital</title>
     </head>
     <body>
-        Hello World
+        Vital Technology<br>
+        Anonymous Technology - Private Network Solution - Local Area Network Tools<br><br>
+        Vital Team - 2025
     </body>
 </html>
