--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         Vital Technology<br>
         Anonymous Technology - Private Network Solution - Local Area Network Tools<br><br>
         Our Tools:<br>
-        <li></li><a href=https://github.com/DinhHaiNam/ICMP_Message>ICMP_Message</a>
+        <li><a href=https://github.com/DinhHaiNam/ICMP_Message>ICMP_Message</a></li>
         <br><br>
         Vital Team - 2025
     </body>
