--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         Anonymous Technology - Private Network Solution - Local Area Network Tools<br><br>
         Our Tools:<br>
         <li><a href=https://github.com/DinhHaiNam/ICMP_Message>ICMP_Message</a></li>
+        <li><a href=https://github.com/DinhHaiNam/VitalChar>Chars</a></li>
+        <li><a href=https://github.com/DinhHaiNam/VitalEncoder>Encoder</a></li>
         <br><br>
         Vital Team - 2025
     </body>
