--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>Vital</title>
     </head>
     <body>
+        <p style="font-size: 32px;">
         Vital Technology<br>
         Anonymous Technology - Private Network Solution - Local Area Network Tools<br><br>
         Our Tools:<br>
@@ -11,5 +12,6 @@
         <li><a href=https://github.com/DinhHaiNam/VitalEncoder>Encoder</a></li>
         <br><br>
         Vital Team - 2025
+        </p>
     </body>
 </html>
