--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
-<html>
-    <head>
-        <title>Vital</title>
-    </head>
-    <body>
-        <p style="font-size: 32px;">
-        Vital Technology<br>
-        Anonymous Technology - Private Network Solution - Local Area Network Tools<br><br>
-        Our Tools:<br>
-        <li><a href=https://github.com/DinhHaiNam/ICMP_Message>ICMP_Message</a></li>
-        <li><a href=https://github.com/DinhHaiNam/VitalChar>Chars</a></li>
-        <li><a href=https://github.com/DinhHaiNam/VitalEncoder>Encoder</a></li>
-        <br><br>
-        Vital Team - 2025
-        </p>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Vital</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            font-size: 18px;
+            padding: 20px;
+            line-height: 1.6;
+        }
+        h1 {
+            font-size: 32px;
+        }
+        ul {
+            list-style-type: disc;
+            padding-left: 20px;
+        }
+    </style>
+</head>
+<body>
+    <h1>Vital Technology</h1>
+    <p>
+        Anonymous Technology - Private Network Solution - Local Area Network Tools
+    </p>
+
+    <p><strong>Our Tools:</strong></p>
+    <ul>
+        <li><a href="https://github.com/DinhHaiNam/ICMP_Message" target="_blank">ICMP_Message</a></li>
+        <li><a href="https://github.com/DinhHaiNam/VitalChar" target="_blank">Chars</a></li>
+        <li><a href="https://github.com/DinhHaiNam/VitalEncoder" target="_blank">Encoder</a></li>
+    </ul>
+
+    <p><em>Vital Team - 2025</em></p>
+</body>
 </html>
